[package]
name = "winwalk"
version = "0.1.0"
edition = "2021"
authors = ["Bay"]
description = "Walk directories on Windows."
repository = "https://github.com/zX3no/winwalk"
readme = "README.md"
license = "CC0-1.0"

[dependencies]
bitflags = "2.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "walk"
harness = false
