[package]
name = "winwalk"
version = "0.1.0"
edition = "2021"
authors = ["Bay"]
description = "Walk directories on Windows."
repository = "https://github.com/zX3no/winwalk"
readme = "README.md"
license = "CC0-1.0"

[dependencies]
bitflags = "2.4.0"

[dev-dependencies]
divan = "0.1.2"
walkdir = "2.4.0"

[[bench]]
name = "walk"
harness = false
